# goit-python-web-13.1-hw

./: README.md  docker-compose.yml  main.py  pyproject.toml
migration/: env.py
migration/versions/: 0ae3fedf5b67_init.py  35a919d34126_add_role.py  c5ce3c4e5404_add_veryfi.py  fe7e2a4cfed3_init.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py  roles.py
